fix spacing in nav

--- a/src/layouts/style.module.scss
+++ b/src/layouts/style.module.scss
@@ -80,6 +80,7 @@ ul > li {
   color: $font;
   font-weight: 600;
   margin: 0;
+  margin-bottom: .25rem;
   padding: 0;
   &:hover {
     color: #0edad9;
